<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="label_imc">IMC</string>
    <string name="label_tmb">TMB</string>
    <string name="imc_desc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso
        do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal,
        acima ou abaixo do peso desejado. \n\nPreencha
        os campos de peso e altura para descobrir o seu IMC</string>
    <string name="enter_with_your_weight">Peso(kg)</string>
    <string name="enter_with_your_height">Altura(cm)</string>
    <string name="years_string">Idade</string>
    <string name="calc">Calcular</string>
    <string name="invalide_fields">Os campos devem conter valores validos!</string>

    <string name="imc_severely_low_weight">Severametne abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente Obeso<obeso></obeso></string>
    <!-- string com valor  dinamico-->
    <string name="imc_response">IMC: %1$.2f</string>
    <string name="tmb_response">TMB: %1$.2f</string>
    <string name="save_response">Resultado IMC: %1$.2f,  Date: %2$s</string>
    <string name="imc_image">IMC image</string>


    <!-- DB values -->
    <string name="save">Salvar</string>
    <string name="saved">registro salvo com sucesso.</string>
    <string name="search">Buscar</string>
    <string name="man_string">Masculino</string>
    <string name="woman_string">Feminino</string>
</resources>