<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">
        <!-- a gravidade do layout_gravity, corresponde a seu próprio container -->
        <!-- a gravidade do gravity, corresponde a seus filhos -->
        <TextView
            android:id="@+id/imc_txt"
            style="@style/TextViewForm"
            android:text="@string/imc_desc" />

        <EditText
            android:id="@+id/edit_imc_weight"
            style="@style/EditViewForm"
            android:hint="@string/enter_with_your_weight" />

        <EditText
            android:id="@+id/edit_imc_height"
            style="@style/EditViewForm"
            android:hint="@string/enter_with_your_height" />

        <Button
            android:id="@+id/btn_imc_send"
            style="@style/generic_button"
            android:text="@string/calc" />


    </LinearLayout>
</ScrollView>